Fix for bug 39811 -- make font prefs work for non-unicode text drawing. r=ftang.